<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="support">Написать в поддержку</string>
    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_text">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="email">"timerbayevaf@yandex.ru"</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="player_default_time">00:00</string>
    <string name="media_favorite_tracks_title">Избранные треки</string>
    <string name="media_playlist_title">Плейлисты</string>
    <string name="media_add_new_playlist">Новый плейлист</string>
    <string name="media_favorite_tracks_error">Ваша медиатека пуста</string>
    <string name="media_playlist_error">Вы не создали \n ни одного плейлиста</string>
    <string name="search_no_connection">Проверьте подключение к интернету</string>
    <string name="search_internal_server_error">Ошибка сервера</string>
    <string name="playlist_create_title">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="no_tracks">Нет треков</string>
    <string name="exit_creation_title">Завершить создание плейлиста</string>
    <string name="exit_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="playlist_message_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="playlist_message_track_exist_in_playlist">Трек уже добавлен в плейлист %s</string>
    <plurals name="playlist_count_tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="playlist_total_minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="playlist_is_empty">В этом плейлисте еще нет треков</string>
    <string name="playlist_details_share">Поделиться</string>
    <string name="share_playlist_title_prefix">Плейлист:</string>
    <string name="playlist_details_edit_info">Редактировать информацию</string>
    <string name="playlist_details_delete">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="delete_track_title">Удаление трека</string>
    <string name="delete_track_message">Хотите удалить трек «%1$s»?</string>
    <string name="no_tracks_to_share">в данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="exit_edit_title">Выйти без сохранения?</string>
    <string name="exit_edit_message">Все несохранённые изменения будут потеряны.</string>
    <string name="playlist_updated">Плейлист обновлён</string>

</resources>