<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="14dp"
    android:paddingBottom="40dp"
    tools:context=".search.ui.SearchFragment"
    tools:ignore="ScrollViewSize">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BaseToolbar"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/search" />

    <FrameLayout
        style="@style/OutlineContainer"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/outline_shape">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/OutlineTextInputStyle"
            android:drawableStart="@drawable/search"
            android:textCursorDrawable="@drawable/cursor_color"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/search"
            android:inputType="text|textNoSuggestions"
            android:imeOptions="actionDone"
            android:singleLine="true"
           />

        <ImageButton
            android:id="@+id/clearButton"
            style="@style/OutlineTextClearStyle"
            android:visibility="gone" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="248dp"
        android:indeterminateTint="@color/blue"
        android:outlineAmbientShadowColor="@color/shadow"
        android:visibility="gone" />

    <TextView
        android:id="@+id/searchHistoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_history_title"
        android:layout_marginTop="26dp"
        style="@style/TittleSearchHistory" />

    <!-- RecyclerView с фиксированной высотой -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingHorizontal="2dp"
        android:paddingTop="30dp"
        tools:listitem="@layout/track_view" />

    <!-- Кнопка "Очистить историю" -->
    <Button
        android:id="@+id/searchHistoryClearButton"
        style="@style/SearchButtonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/icon_10"
        android:text="@string/search_history_clear"
        app:cornerRadius="54dp" />

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="110dp"
        android:layout_marginStart="@dimen/margin_bottom"
        android:layout_marginEnd="@dimen/margin_bottom"
        >

        <ImageView
            android:id="@+id/placeholderNoConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/SearchNoConnectionImage"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/placeholderNothingFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"
            style="@style/SearchNothingFoundImage"/>

        <TextView
            android:id="@+id/placeholderError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SearchErrorMessage"
            android:layout_marginTop="@dimen/padding_large"
            />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/icon_10"
            android:text="@string/update"
            style="@style/SearchUpdateButton"/>

    </LinearLayout>
</LinearLayout>
